Removing grid and adding mobile ticket link fix

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -18,8 +18,8 @@
     <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
 
     <div class="cta">
-      <%= link_to 'Sponsor Profiles', '#', :class => "btn outline alt" %>
-      <p>Interested in <%= link_to 'becoming a sponsor', '#' %>?</p>
+      <%= link_to 'Sponsor Profiles', '/sponsors', :class => "btn outline alt" %>
+      <p>Interested in <%= link_to 'becoming a sponsor', '/sponsors' %>?</p>
     </div>
 
   </div>
