--- a/source/stylesheets/modules/_header.scss
+++ b/source/stylesheets/modules/_header.scss
@@ -2,9 +2,9 @@
 // ------------------------------------------------------------
 
 .site-header{
-  padding: 40px 0;
+  padding: 40px 0 0 0;
   @include respond-min($bp-tablet){
-    padding: 63px 0;
+    padding: 63px 0 0 0;
   }
 }
 
