--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -6,20 +6,20 @@ body.schedule {
   background: $main url("/images/home-bg.jpg") no-repeat top right fixed;
   background-size: 400px auto;
 
-  @include respond-min(500px) {
+  @include respond-min($bp-lg-phone) {
     background-size: 768px auto;
   }
 
-  @include respond-min(769px) {
+  @include respond-min($bp-gt-tablet) {
     background-image: url("/images/home-bg-desktop.jpg") no-repeat 0 0;
     background-size: 1024px auto;
   }
 
-  @include respond-min(1025px) {
+  @include respond-min($bp-gt-desktop) {
     background-size: 1200px auto;
   }
 
-  @include respond-min(1200px) {
+  @include respond-min($bp-mega) {
     background-size: 100% auto;
   }
 
@@ -88,11 +88,13 @@ body.schedule .main-nav ul li.nav-schedule a {
 
   @include respond-min($bp-desktop){
     h2{
-      // @include span-columns(5);
+      width: 45%;
+      float: left;
     }
     div.hero-content{
-      // @include span-columns(5);
-      // @include omega();
+      width: 45%;
+      float: left;
+      margin-left: 10%;
     }
   }
 
@@ -154,8 +156,7 @@ body.schedule .main-nav ul li.nav-schedule a {
     height: 100vh;
     position: relative;
     .wrapper{
-      // @include span-columns(6, block-collapse);
-      // @include shift(2); 
+      .width: 60%;
       position: relative;
       top: 50%;
       transform: translateY(-50%);
