Added header slide and tidying up

--- a/source/_speakers.html.erb
+++ b/source/_speakers.html.erb
@@ -1,9 +1,10 @@
 <section class="block speakers" id="speakers">
 
   <div class="wrapper">
-
     <h2>Featuring...</h2>
+  </div>
 
+  <div class="wrapper speakers">
     <ul class="speaker-list">
       <li>
         <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
@@ -42,12 +43,16 @@
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
     </ul>
+  </div>
 
+  <div class="wrapper">
     <div class="cta">
       <%= link_to 'Get your Ticket', '#', :class => "btn outline" %>
       <p>First release available now</p>
     </div>
-    
   </div>
+
+
+
   
 </section>
