--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
   <body class="<%= page_classes %>">
     <header class="site-header">
       <div class="wrapper">
-        <%= link_to 'Bath Ruby', '/', :class => "logo" %>
+        <%= link_to 'Bath Ruby Conference 2016', '/', :class => "logo" %>
         <nav class="main-nav">
           <ul>
             <li class="nav-home"><%= link_to 'Home', '/' %></li>
