--- a/source/stylesheets/modules/_header.scss
+++ b/source/stylesheets/modules/_header.scss
@@ -4,7 +4,7 @@
 .site-header{
   padding: 40px 0 0 0;
   @include respond-min($bp-tablet){
-    padding: 63px 0 0 0;
+    padding: 60px 0 0 0;
   }
 }
 
@@ -110,4 +110,45 @@ body.tickets .main-nav ul li.nav-tickets a {
   @include respond-min($bp-desktop){
     color: $contrast-light;
   }
+}
+
+
+
+// Scroll Menu
+body.scroll .site-header {
+  @include respond-min($bp-gt-desktop){
+    width: 100%;
+    height: 50px;
+    background: $light;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0;
+    z-index: 999;
+    transform: translateY(-50px);
+    animation: come-in 0.7s ease forwards;
+
+    .main-nav li a {
+      color: $main;
+      &:hover{color: $contrast;}
+    }
+
+    a.logo{
+      background: url("/images/logo-small.png") no-repeat 0 16px;
+      background-size: 33px 20px;
+      text-indent: 0;
+      @include font-sans;
+      color: $contrast;
+      text-transform: uppercase;
+      display: inline-block;
+      width: auto;
+      line-height: 50px;
+      padding-left: 43px;
+      height: 50px;
+    }
+  }
+}
+
+@keyframes come-in {
+  to { transform: translateY(0); }
 }
