--- a/source/stylesheets/modules/_speaker-list.scss
+++ b/source/stylesheets/modules/_speaker-list.scss
@@ -55,23 +55,24 @@
       float: left;
       position: relative;
       
-      &:nth-child(3n+1){
-        top: 100px;
-      }
-
-      &:nth-child(3n+2){
-        top: 50px;
-      }
-
-      // &:nth-child(3n+3){
-      // }
+      &:nth-child(3n+1){top: 100px;}
+      &:nth-child(3n+2){top: 50px;}
     }
   }
 
-  //   @include respond-min($bp-desktop) {
-  //   li{
-  //   }
-  // }
+  @include respond-min($bp-mega) {
+    li{
+      width: 16.66%;
+      margin-left: 0%;
+      margin-right: 0%;
+      &:nth-child(6n+1){top: 250px;}
+      &:nth-child(6n+2){top: 200px;}
+      &:nth-child(6n+3){top: 150px;}
+      &:nth-child(6n+4){top: 100px;}
+      &:nth-child(6n+5){top: 50px;}
+      &:nth-child(6n+6){top: 0px;}
+    }
+  }
 
 
 }
