Adding ticket links and mailing list, tidying up menu and paralax scrolls

--- a/source/_speakers.html.erb
+++ b/source/_speakers.html.erb
@@ -47,7 +47,7 @@
 
   <div class="wrapper">
     <div class="cta">
-      <%= link_to 'Get your Ticket', '#', :class => "btn outline" %>
+      <%= link_to 'Get your Ticket', 'https://ti.to/bath-ruby/2016', :class => "btn outline" %>
       <p>First release available now</p>
     </div>
   </div>
