--- a/source/_tickets.html.erb
+++ b/source/_tickets.html.erb
@@ -22,7 +22,7 @@
           Student
           <span>&pound;39</span>
         </p>
-        <%= link_to 'Buy Now', '#', :class => "btn" %>
+        <%= link_to 'Buy Now', 'https://ti.to/bath-ruby/2016', :class => "btn" %>
       </div>
 
       <div class="release not-on-sale">
@@ -38,6 +38,26 @@
       </div>
       
     </div>
+
+    <div id="mc_embed_signup">
+      <p>Get notified of conference updates</p>
+      <form action="//bathruby.us1.list-manage.com/subscribe/post?u=f18bb7508370614edaffb50dd&amp;id=73743da027" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">  
+          <div class="mc-field-group">
+            <label for="mce-EMAIL">Email Address</label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address">
+          </div>
+ <!--          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div> -->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            <input type="text" name="b_f18bb7508370614edaffb50dd_73743da027" tabindex="-1" value="">
+          </div>
+          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+        </div>
+      </form>
+    </div>
       
   </div>
-    </section>
+</section>
