--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -26,6 +26,7 @@
 @import "modules/media";
 @import "modules/speaker-list";
 @import "modules/tickets";
+@import "modules/mailinglist";
 
 // Pages
 @import "pages/home";
