--- a/source/stylesheets/modules/_header.scss
+++ b/source/stylesheets/modules/_header.scss
@@ -116,7 +116,8 @@ body.tickets .main-nav ul li.nav-tickets a {
 
 // Scroll Menu
 body.scroll .site-header {
-  @include respond-min($bp-gt-desktop){
+  @include respond-min($bp-tablet){
+    transition: height 0.5s, top 0.5s;
     width: 100%;
     height: 50px;
     background: $light;
@@ -125,8 +126,9 @@ body.scroll .site-header {
     left: 0;
     padding: 0;
     z-index: 999;
-    transform: translateY(-50px);
-    animation: come-in 0.7s ease forwards;
+    top: -50px;
+
+    .menu{background-image: url("/images/menu-red.png");}
 
     .main-nav li a {
       color: $main;
@@ -149,6 +151,14 @@ body.scroll .site-header {
   }
 }
 
-@keyframes come-in {
-  to { transform: translateY(0); }
+body.scroll-two{
+  .site-header{top: 0px;}
+}
+
+
+body.scroll.menu-open .site-header{
+  height: 100%;
+  ul li a{color: $light;}
+  .menu{background-image: url("/images/menu-white.png");}
+  a.logo{color: $light;background-image: url("/images/logo-small-white.png");}
 }
