--- a/source/stylesheets/modules/_speaker-list.scss
+++ b/source/stylesheets/modules/_speaker-list.scss
@@ -46,16 +46,15 @@
   }
 
   @include respond-min($bp-tablet) {
-    margin-bottom: 100px;
-    margin-left: $gutter;
+    margin: 150px 0 0 0;
     li{
       width: 23.3%;
       margin-left: 5%;
       margin-right: 5%;
       float: left;
       position: relative;
-      &:nth-child(3n+1){transform: translateY(100px);}
-      &:nth-child(3n+2){transform: translateY(50px);}
+      &:nth-child(3n+1){top: 100px;}
+      &:nth-child(3n+2){top: 50px;}
     }
   }
 
@@ -64,12 +63,12 @@
       width: 16.66%;
       margin-left: 0%;
       margin-right: 0%;
-      &:nth-child(6n+1){transform: translateY(250px);}
-      &:nth-child(6n+2){transform: translateY(200px);}
-      &:nth-child(6n+3){transform: translateY(150px);}
-      &:nth-child(6n+4){transform: translateY(100px);}
-      &:nth-child(6n+5){transform: translateY(50px);}
-      &:nth-child(6n+6){transform: translateY(0px);}
+      &:nth-child(6n+1){top:250px;}
+      &:nth-child(6n+2){top:200px;}
+      &:nth-child(6n+3){top:150px;}
+      &:nth-child(6n+4){top:100px;}
+      &:nth-child(6n+5){top:50px;}
+      &:nth-child(6n+6){top:0px;}
     }
   }
 
