--- a/source/_speakers.html.erb
+++ b/source/_speakers.html.erb
@@ -4,7 +4,7 @@
     <h2>Featuring...</h2>
   </div>
 
-  <div class="wrapper speakers">
+  <div class="wrapper speakers scrollme">
     <ul class="speaker-list">
       <li>
         <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
@@ -12,7 +12,7 @@
         <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
-        <li>
+      <li>
         <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
         <h3>Linda Liukas</h3>
         <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
