tidying up pralax on speakers list

--- a/source/stylesheets/modules/_speaker-list.scss
+++ b/source/stylesheets/modules/_speaker-list.scss
@@ -3,6 +3,7 @@
 .speaker-list{
   @include list-style-none();
   @include clearfix();
+  transition: transform 0.1s;
 
   li {
     text-align: center;
