--- a/source/stylesheets/modules/_header.scss
+++ b/source/stylesheets/modules/_header.scss
@@ -117,7 +117,7 @@ body.tickets .main-nav ul li.nav-tickets a {
   transition: height 0.5s, transform 0.5s;
   width: 100%;
   height: 50px;
-  background: $light;
+  background: rgba($light, 0.8);
   position: fixed;
   left: 0;
   top: 0; 
