--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -4,16 +4,20 @@
 @keyframes gemMove {
   from {
     transform: translate3d(200px, -100px, 0) rotate3d(1, 1, .45, -20deg);
+    @include transform(translate3d(200px, -100px, 0) rotate3d(1, 1, .45, -20deg));
   }
-
   to {
     transform: translate3d(0, 0, 0) rotate3d(1, 1, .45, 0);
+    @include transform(translate3d(0, 0, 0) rotate3d(1, 1, .45, 0));
   }
 }
 
 body.index,
 body.schedule {
+  position: relative;
+  z-index: 0;
   background: $main;
+
   // Header Colours
   .site-header a.logo{background-image: url("/images/logo-white.png");}
   .site-header .menu{background-image: url("/images/menu-white.png");}
@@ -21,18 +25,20 @@ body.schedule {
     color: $light;
     &:hover{color: $contrast;}
   }
+  .scroll-header{background: $light;}
 
-  .site-header, .block, .site-footer, .main-content {
+  .page {
     position: relative;
-    z-index: 10;
+    z-index: 100;
   }
 
   // Gem BG
   &:before {
+    transform-style: flat;
     content: "";
     display: block;
     position: fixed;
-    z-index: 0;
+    z-index: 1;
     top: 0;
     right: 0;
     width: 100%;
@@ -41,7 +47,7 @@ body.schedule {
     background-size: 400px auto;
     animation-duration: 1s;
     animation-name: gemMove;
-
+    -webkit-backface-visibility: hidden;
     @include respond-min($bp-lg-phone) {
       background-size: 768px auto;
     }
