Added social meta tags and Readme

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,7 @@
+---
+description: "Bath Ruby is a one day, single track conference in the beautiful British city of Bath, organised by Simon Starr with help from Andrew Nesbitt and Jordan Elver."
+---
+
 <%= partial "hero" %>
 
 <%= partial "speakers" %>
