--- a/source/information.html.erb
+++ b/source/information.html.erb
@@ -1,3 +1,8 @@
+---
+page_classes: "information"
+description: "Bath Ruby is a one day, single track conference in the beautiful British city of Bath, organised by Simon Starr with help from Andrew Nesbitt and Jordan Elver."
+---
+
 <div class="main-content">
 
   <div class="wrapper info">
