--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,7 +2,31 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Bath Ruby Conference - 11th March 2015</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Bath Ruby Conference - 11th March 2016</title>
+
+    <meta name="description" content="<%= current_page.data.description %>">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Social Meta Tags -->
+    <meta property="og:title" content="Bath Ruby Conference - 11th March 2016">
+    <meta property="og:site_name" content="Bath Ruby">
+    <meta property="og:url" content="http://2016.bathruby.org/">
+    <meta property="og:description" content="<%= current_page.data.description %>">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_GB"/>
+    <!-- <meta property="og:image" content="#"/> -->
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@BathRuby">
+    <meta name="twitter:url" content="http://2016.bathruby.org/">
+    <meta name="twitter:creator" content="@BathRuby">
+    <meta name="twitter:title" content="Bath Ruby">
+    <meta name="twitter:description" content="<%= current_page.data.description %>">
+    <!-- <meta name="twitter:image:src" content="#"> -->
+
     <%= stylesheet_link_tag "application" %>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <%= javascript_include_tag 'modenizer' %>
