--- a/source/schedule.html.erb
+++ b/source/schedule.html.erb
@@ -1,5 +1,6 @@
 ---
 page_classes: "schedule"
+description: "Bath Ruby is a one day, single track conference in the beautiful British city of Bath, organised by Simon Starr with help from Andrew Nesbitt and Jordan Elver."
 ---
 
 <div class="main-content">
