--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -47,7 +47,7 @@
               <li class="nav-tickets"><%= link_to 'Tickets', '#tickets' %></li>
             </ul>
           </nav>
-          <a href="#" class="menu">Menu</a>
+          <span class="menu">Menu</span>
         </div>
       </header>
 
