Got paralax working in safari ffs

--- a/source/_speakers.html.erb
+++ b/source/_speakers.html.erb
@@ -7,37 +7,37 @@
   <div class="wrapper speakers scrollme">
     <ul class="speaker-list">
       <li>
-        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
+        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image", :alt => "Bill Murray" %>
         <h3>Janet Crawford</h3>
         <%= link_to "@janetcrawford", 'http://twitter.com/janetcrawford', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
       <li>
-        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
+        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image", :alt => "Bill Murray" %>
         <h3>Coraline Ada Ehmke</h3>
         <%= link_to "@CoralineAda", 'http://twitter.com/CoralineAda', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
       <li>
-        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
+        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image", :alt => "Bill Murray" %>
         <h3>Courteney Ervin</h3>
         <%= link_to "@courteneyervin", 'http://twitter.com/courteneyervin', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
       <li>
-        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
+        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image", :alt => "Bill Murray" %>
         <h3>Zach Holman</h3>
         <%= link_to "@holman", 'http://twitter.com/holman', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
       <li>
-        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
+        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image", :alt => "Bill Murray" %>
         <h3>Aaron Patterson</h3>
         <%= link_to "@tenderlove", 'http://twitter.com/tenderlove', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
       </li>
       <li>
-        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
+        <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image", :alt => "Bill Murray" %>
         <h3>Xavier Riley</h3>
         <%= link_to "@xavriley", 'http://twitter.com/xavriley', :class => "twitter" %>
         <p>Co-founder of <a href="#">Rails Girls</a>, <a href="#">author</a> and <a href="#">Ruby Hero</a></p>
