--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -190,7 +190,7 @@ body.schedule .main-nav ul li.nav-schedule a {
     height: 100vh;
     position: relative;
     .wrapper{
-      .width: 60%;
+      width: 60%;
       position: relative;
       top: 50%;
       transform: translateY(-50%);
