--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -3,19 +3,19 @@
     <h1>Sponsors</h1>
 
     <h2>Venue Sponsor</h2>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
 
     <h2>Gold Sponsors</h2>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
 
     <h2>Silver Sponsors</h2>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
 
     <h2>Bronze Sponsors</h2>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
+    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
 
     <div class="cta">
       <%= link_to 'Sponsor Profiles', '/sponsors', :class => "btn outline alt" %>
