--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -3,23 +3,17 @@
     <h1>Sponsors</h1>
 
     <h2>Venue Sponsor</h2>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
+    <%= link_to image_tag("sponsors/banes.png", width: 300, height: 150, alt: "Bath & North East Somerset Council"), "http://bathnes.gov.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
     <h2>Gold Sponsors</h2>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
-
-    <h2>Silver Sponsors</h2>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
+    <%= link_to image_tag("sponsors/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
     <h2>Bronze Sponsors</h2>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
-    <%= link_to image_tag("http://placehold.it/300x150", :alt => "Sponsor Logo"), "#", :class => "sponsor-logo"%>
+    <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
     <div class="cta">
       <%= link_to 'Sponsor Profiles', '/sponsors', :class => "btn outline alt" %>
-      <p>Interested in <%= link_to 'becoming a sponsor', '/sponsors' %>?</p>
+      <p>Interested in <%= link_to 'becoming a sponsor', 'https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf' %>?</p>
     </div>
 
   </div>
