--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -6,56 +6,25 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
 <div class="main-content">
 
   <div class="wrapper sponsors">
-    
+
     <h1>Sponsors</h1>
-
-    <h2>Venue Sponsor</h2>
-
-    <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
-    </div>
-
 
     <h2>Gold</h2>
 
     <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
-    </div>
-
-    <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
-    </div>
-
-    <h2>Silver</h2>
-
-    <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
-    </div>
-
-    <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+      <%= link_to image_tag("sponsors/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Bytemark Hosting</strong> Bytemark is the UK's smartest hosting company for builders and self-starters, established in 2002. It has its own data centre in York, another in Manchester, and its own cloud hosting platform called BigV (70,000 lines of Ruby). BigV lets developers scale to servers of up to 180GB of RAM, and to mix in dedicated servers for the most flexible hosting network. Bytemark can also take on active management of applications and clients, including all the fiddly stuff like backups, health monitoring and 24-hour response. Bytemark love Ruby, and are always interested in meeting programmers looking for a new challenge.</p>
     </div>
 
     <h2>Bronze</h2>
 
     <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+      <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Rawnet</strong></p>
     </div>
-
-    <div class="media">
-      <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
-      <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
-    </div>
-
 
     <h2>Become a Sponsor</h2>
-    <p class="download">Download our <%= link_to "sponsorship prospectus" , "#" %>.</p>
+    <p class="download">Download our <%= link_to "sponsorship prospectus" , "https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf" %>.</p>
 
   </div>
   
