Homepage copy change

--- a/source/_hero.html.erb
+++ b/source/_hero.html.erb
@@ -5,9 +5,9 @@
     <div class="hero-wrap">
       <h2><span>11 March 2016</span> The Assembly Rooms, Bath, UK</h2>
       <div class="hero-content">
-        <p>Situated in the beautiful British city of Bath, organised by <%= link_to "Simon Starr", 'https://twitter.com/sstarr' %> with help from <%= link_to "Andrew Nesbitt", 'https://twitter.com/teabass' %> and <%= link_to "Jordan Elver", 'https://twitter.com/jordelver' %>. It's aimed at Rubyists of all skill levels and we're fortunate enough to be joined by some of the Ruby community's favourite speakers.</p>
+        <p>Situated in the beautiful British city of Bath, this is a conference for Rubyists of all skill levels. Once again we're fortunate enough to be joined by a fantastic line up of speakers, giving both technical and non-technical talks on a range of subjects.</p>
 
-        <p>Thanks to the support of our wonderful <%= link_to "sponsors", '/sponsors.html' %>, and because we're not putting the conference on to make a profit, we can afford to keep ticket prices down and donate 10% of sales to <%= link_to "Save the Children", 'http://www.savethechildren.org/' %>, the world's leading independent organisation for children.</p>
+        <p>Thanks to the support of our wonderful <%= link_to "sponsors", '/sponsors.html' %> we can afford to keep ticket prices down and donate 10% of sales to <%= link_to "Save the Children", 'http://www.savethechildren.org/' %>, the world's leading independent organisation for children.</p>
       </div>
     </div>
     <a href="#speakers" class="scroll-arrow"></a>
